# AIwatch_blockchain

AiWatch-blockchain/AdminInteractions/: main.py
AiWatch-blockchain/AdminInteractions/AdminFunctions/: .env  abi.json  admin_Functions.py
AiWatch-blockchain/Ditto_Module/: main.py
AiWatch-blockchain/HybridV2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
AiWatch-blockchain/HybridV2/Main/: BlockchainLoader.cpp  CMakeLists.txt  Main.cpp  Makefile  cmake_install.cmake
AiWatch-blockchain/upgradableContracts/: hardhat.config.js  package-lock.json  package.json
AiWatch-blockchain/upgradableContracts/.openzeppelin/: unknown-20.json
AiWatch-blockchain/upgradableContracts/contracts/: ManagerV1.sol  StorageV1.sol  prova.sol
AiWatch-blockchain/upgradableContracts/scripts/: deploy.js  deployprova.js  deplyManager.js
BesuBlockchain/: config.toml  docker-compose.yaml
BesuBlockchain/Node1/data/database/: 000346.sst  000352.sst  MANIFEST-000349
BesuBlockchain/Node2/data/database/: 000303.sst  MANIFEST-000299
BesuBlockchain/Node3/data/database/: 000302.sst  000308.sst  MANIFEST-000305
